k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # הוספת ה-Rewrite הזה היא קריטית אם השרת שלך לא מצפה למילה /api בתוך הקוד שלו
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          # 1. קודם כל ה-API (הספציפי יותר)
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
          
          # 2. אחר כך ה-Client (הכללי)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
